--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* adding google font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
 * {
     box-sizing: border-box;
@@ -76,7 +77,7 @@ nav .nav-item .nav-link {
 
 .food-card:hover {
     transform: translateY(-20px);
-    background: lightblue;
+    background: rgba(11, 189, 144, 0.384);
 }
 
 #food-datails-shower {
