--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ nav .nav-item .nav-link {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
-    width: 1000px;
+    width: 70%;
     margin: auto;
 }
 
-.food-card-area-warning {
-    width: 1000px;
+.food-card-error {
     margin: auto;
     text-align: center;
+    width: 60%;
 }
 
 .item-thum {
@@ -77,7 +77,8 @@ nav .nav-item .nav-link {
 
 .food-card:hover {
     transform: translateY(-20px);
-    background: rgba(11, 189, 144, 0.384);
+    background: #12b3cce0;
+    color: floralwhite;
 }
 
 #food-datails-shower {
@@ -123,4 +124,15 @@ nav .nav-item .nav-link {
 }
 .close-icon:focus {
     outline: none;
+}
+.copyright{
+    margin-top: 50px;
+    width: 100%;
+    padding: 20px 10px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 22px;
+}
+.copyright p{
+    margin: 0;
 }
