--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* adding google font */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
 * {
     box-sizing: border-box;
@@ -42,10 +43,17 @@ nav .nav-item .nav-link {
 
 .ingredient li {
     list-style: none;
+    font-size: 20px;
 }
 
 .ingredient li::before {
     content: '';
+}
+
+.ingredient i {
+    font-size: 20px;
+    margin: 5px 10px 5px 0;
+    color: rgb(228, 61, 0);
 }
 
 .item-details-card .card {
@@ -81,7 +89,7 @@ nav .nav-item .nav-link {
     color: floralwhite;
 }
 
-#food-datails-shower {
+#food-datails-show {
     background: #ffffff;
     position: fixed;
     height: 100vh;
@@ -93,7 +101,7 @@ nav .nav-item .nav-link {
     overflow-y: auto;
 }
 
-#food-datails-shower::-webkit-scrollbar {
+#food-datails-show::-webkit-scrollbar {
     display: none;
 }
 
@@ -122,6 +130,7 @@ nav .nav-item .nav-link {
     background: red;
     color: white;
 }
+
 .close-icon:focus {
     outline: none;
 }
